# forecast_

./: .gitignore  README.md  pyproject.toml
artifacts/: test.csv  train.csv
config/: conf.yaml
data/raw/: vendas.csv
notebooks/: analise_exploratoria.ipynb
src/: exception.py
src/components/: data_ingestion.py  data_transformation.py
tests/: test_data_transformation.py
